[package]
name = "input"
description = "libinput bindings for rust"
license = "MIT"
documentation = "https://Drakulix.github.io/input.rs"
repository = "https://github.com/Drakulix/input.rs"
version = "0.4.0"
keywords = ["wayland", "input", "bindings"]
categories = ["external-ffi-bindings"]
authors = ["Drakulix (Victor Brekenfeld)"]

[dependencies]
input-sys = { version = "1.7.1", path = "./input-sys" }
libc = "0.2"
bitflags = "1.0.0"
libudev = { git = "https://github.com/Drakulix/libudev-rs.git", branch = "feature/raw_ffi_access", optional = true }

[features]
default = ["udev"]
gen = ["input-sys/gen"]
udev = ["libudev"]
